# market_span_cluster

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
market_pattern_search/: __init__.py  config.py  dataset.py  debug-snippets.js  features.py  file_picker.js  file_picker.py  file_picker2.py  matches.py  models.py  plots.py  plotting.py
market_pattern_search/modeling/: predict.py  train.py
market_span_cluster/: __init__.py  config.py  matches.py  models.py  plotting.py
notebooks/: Scanner3.ipynb  TestWidgets.ipynb  search.ipynb
